# derid

./: .clang-format  CMakeLists.txt  README.md  format.sh  run_all_tests.sh
src/: buffer.cpp  buffer.hpp  buffer_entry.cpp  buffer_entry.hpp  colors.cpp  colors.hpp  config.cpp  config.hpp  curses.cpp  curses.hpp  derid.cpp  files.cpp  files.hpp  label.hpp  list.cpp  list.hpp  pos.cpp  pos.hpp
src/include/: loguru.hpp
src/widgets/: label.cpp  label.hpp  list.cpp  list.hpp
tests/: test_colors.cpp  test_config.cpp  test_readdir.cpp
tests/test_data/.config/derid/: theme.toml
tests/test_data/config/: invalid_syntax.toml  missing_keys.toml  settings.toml
